okay na nhere yung index

--- a/MyJourney.html
+++ b/MyJourney.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="pages-common.css" />
     <link rel="stylesheet" href="MyJourney.css" />
     <link rel="stylesheet" href="MyJourneyMediaQuaries.css" />
+    <link rel="stylesheet" href="footer-styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 
@@ -43,7 +44,151 @@
             </div>
         </div>
     </nav>
-    <!-- Content will be updated later -->
+
+    <!-- Hero Section -->
+    <section class="journey-hero">
+        <div class="hero-content">
+            <h1 class="hero-title">Navigating Uncharted Waters</h1>
+            <p class="hero-subtitle">From Hospitality Management to the IT Industry</p>
+            <p class="hero-quote">
+                "The seas were rough, the winds uncertain, but like any true adventurer, I set my compass toward the
+                horizon and never looked back. This is my journey from serving tables to writing code, from managing
+                guests to managing systems."
+            </p>
+        </div>
+    </section>
+
+    <!-- Lessons from the Grand Line Section -->
+    <section class="journey-lessons">
+        <div class="lessons-container">
+            <h2 class="lessons-title">
+                <span class="blue-text">Lessons from the</span> <span class="gold-text">Grand Line</span>
+            </h2>
+
+            <article class="lesson-article">
+                <div class="lesson-image-container">
+                    <!-- Add your image here -->
+                </div>
+                <div class="lesson-content">
+                    <h3 class="lesson-heading">Navigating Through Uncertainty</h3>
+                    <p class="lesson-text">
+                        The transition from hospitality to IT was like sailing into uncharted waters. There were moments
+                        of doubt,
+                        times when the waves seemed too high and the destination too far. But I learned that the most
+                        important
+                        skill isn't knowing everything—it's being willing to learn anything.
+                    </p>
+                    <p class="lesson-text">
+                        Every error message was a teacher, every bug a puzzle waiting to be solved. The ocean doesn't
+                        care about
+                        your background; it only cares about your determination to keep sailing forward. Similarly, the
+                        tech
+                        industry doesn't care where you started—only where you're willing to go.
+                    </p>
+                    <blockquote class="lesson-quote">
+                        "The calm seas never made a skilled sailor. It's the storms that teach you how to navigate."
+                    </blockquote>
+                </div>
+            </article>
+        </div>
+    </section>
+
+    <!-- The Crew Section -->
+    <section class="journey-crew">
+        <div class="crew-container">
+            <h2 class="crew-title">
+                <span class="blue-text">The Crew That</span> <span class="gold-text">Supports Me</span>
+            </h2>
+
+            <article class="crew-article">
+                <div class="crew-content">
+                    <h3 class="crew-heading">No One Sails Alone</h3>
+                    <p class="crew-text">
+                        Just like Luffy and his Straw Hat Pirates, I couldn't have made this journey alone. Behind every
+                        line
+                        of code I write, every project I complete, there's a crew of people who believed in me when I
+                        didn't
+                        believe in myself.
+                    </p>
+                    <p class="crew-text">
+                        My family, who supported my decision to change careers even when it seemed risky. My mentors in
+                        the
+                        developer community who answered my endless questions. My former colleagues in hospitality who
+                        taught
+                        me the value of hard work and perseverance. And the online communities that welcomed a complete
+                        beginner
+                        with open arms.
+                    </p>
+                    <div class="crew-values">
+                        <div class="value-item">
+                            <span class="value-icon">🤝</span>
+                            <span class="value-text">Mentorship</span>
+                        </div>
+                        <div class="value-item">
+                            <span class="value-icon">💪</span>
+                            <span class="value-text">Support</span>
+                        </div>
+                        <div class="value-item">
+                            <span class="value-icon">🌟</span>
+                            <span class="value-text">Belief</span>
+                        </div>
+                        <div class="value-item">
+                            <span class="value-icon">🎯</span>
+                            <span class="value-text">Guidance</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="crew-image-container">
+                    <!-- Add your image here -->
+                    <p class="crew-caption">Together, we're stronger than any storm</p>
+                </div>
+            </article>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="onepiece-footer">
+        <div class="footer-container">
+            <div class="footer-logo">
+                <img src="./assets/OnePieceLogo.png" alt="One Piece Logo" />
+                <p class="footer-tagline">
+                    Sailing the Grand Line with the Straw Hat Pirates 🏴‍☠️
+                </p>
+            </div>
+
+            <nav class="footer-nav">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="AboutLuffy.html">Luffy</a></li>
+                    <li><a href="AboutCrew.html">Crew</a></li>
+                    <li><a href="AboutDevilsFruits.html">Devil Fruits</a></li>
+                    <li><a href="MyJourney.html">My Journey</a></li>
+                </ul>
+            </nav>
+
+            <div class="footer-socials">
+                <h3>Connect</h3>
+                <div class="footer-socials-icons">
+                    <a href="https://github.com/shironxiao" aria-label="GitHub">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a href="https://www.facebook.com/shiron08/" aria-label="Facebook">
+                        <i class="fab fa-facebook"></i>
+                    </a>
+                    <a href="https://www.instagram.com/sh_i_ron" aria-label="Instagram">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                </div>
+            </div>
+
+            <p class="footer-copy">
+                © 2025 Ronald • This is a fan-made website. One Piece is owned by Eiichiro Oda, Shueisha, and Toei
+                Animation.
+            </p>
+        </div>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 
