responsive not okay

--- a/MyJourney.html
+++ b/MyJourney.html
@@ -26,7 +26,7 @@
         </ul>
     </nav>
     <nav id="hamburger-nav">
-        <div class="logo">Ronald</div>
+        <div class="logo"><img src="./assets/OnePieceLogo.png" alt="One Piece Logo" /></div>
         <div class="hamburger-menu">
             <div class="hamburger-icon" onclick="toggleMenu()">
                 <span></span>
@@ -47,29 +47,36 @@
 
     <!-- Hero Section -->
     <section class="journey-hero">
-        <div class="hero-content">
-            <h1 class="hero-title">Navigating Uncharted Waters</h1>
-            <p class="hero-subtitle">From Hospitality Management to the IT Industry</p>
-            <p class="hero-quote">
-                "The seas were rough, the winds uncertain, but like any true adventurer, I set my compass toward the
-                horizon and never looked back. This is my journey from serving tables to writing code, from managing
-                guests to managing systems."
-            </p>
+        <div class="hero-container">
+            <div class="hero-content">
+                <h1 class="hero-title"><span class="blue-text">Navigating</span> <span class="gold-text">Uncharted
+                        Waters</span></h1>
+                <p class="hero-subtitle">From Hospitality Management to the IT Industry</p>
+                <p class="hero-quote">
+                    "The seas were rough, the winds uncertain, but like any true adventurer, I set my compass toward the
+                    horizon and never looked back. This is my journey from serving tables to writing code, from managing
+                    guests to managing systems."
+                </p>
+            </div>
+            <div class="hero-image-section">
+                <img src="./assets/OceanPhoto.jpg" alt="Ocean Journey" class="hero-image" />
+                <p class="hero-personal-quote">"Someday, I'll find my own One Piece, no matter how rough the seas get."
+                </p>
+            </div>
         </div>
     </section>
 
     <!-- Lessons from the Grand Line Section -->
     <section class="journey-lessons">
         <div class="lessons-container">
-            <h2 class="lessons-title">
-                <span class="blue-text">Lessons from the</span> <span class="gold-text">Grand Line</span>
-            </h2>
-
             <article class="lesson-article">
                 <div class="lesson-image-container">
-                    <!-- Add your image here -->
+                    <img src="./assets/CBPA.jpg" alt="Career Journey Certificate" />
                 </div>
                 <div class="lesson-content">
+                    <h2 class="lessons-title">
+                        <span class="blue-text">Lessons from the</span> <span class="gold-text">Grand Line</span>
+                    </h2>
                     <h3 class="lesson-heading">Navigating Through Uncertainty</h3>
                     <p class="lesson-text">
                         The transition from hospitality to IT was like sailing into uncharted waters. There were moments
@@ -93,60 +100,39 @@
         </div>
     </section>
 
-    <!-- The Crew Section -->
-    <section class="journey-crew">
-        <div class="crew-container">
-            <h2 class="crew-title">
-                <span class="blue-text">The Crew That</span> <span class="gold-text">Supports Me</span>
-            </h2>
 
-            <article class="crew-article">
-                <div class="crew-content">
-                    <h3 class="crew-heading">No One Sails Alone</h3>
-                    <p class="crew-text">
-                        Just like Luffy and his Straw Hat Pirates, I couldn't have made this journey alone. Behind every
-                        line
-                        of code I write, every project I complete, there's a crew of people who believed in me when I
-                        didn't
-                        believe in myself.
+    <!-- Journey Article Section -->
+    <article class="journey-article-section">
+        <div class="journey-article-container">
+            <article class="journey-article">
+                <div class="journey-article-content">
+                    <h2 class="journey-article-title">
+                        <span class="blue-text">My</span> <span class="gold-text">Journey</span>
+                    </h2>
+                    <h3 class="journey-article-heading">The People Who Made It Possible</h3>
+                    <p class="journey-article-text">
+                        I couldn't have become who I am today without the unwavering support of my family and friends.
+                        They believed in me when I doubted myself, encouraged me when the path seemed impossible, and
+                        celebrated every small victory along the way. Their faith in my potential gave me the strength
+                        to pursue this dream.
                     </p>
-                    <p class="crew-text">
-                        My family, who supported my decision to change careers even when it seemed risky. My mentors in
-                        the
-                        developer community who answered my endless questions. My former colleagues in hospitality who
-                        taught
-                        me the value of hard work and perseverance. And the online communities that welcomed a complete
-                        beginner
-                        with open arms.
+                    <p class="journey-article-text">
+                        Every late-night study session, every challenge overcome, every milestone reached—each one has
+                        increased the bounty on my head. That wanted poster represents more than just a price; it's a
+                        testament to the journey, the growth, and the determination to keep sailing forward no matter
+                        how rough the seas get.
                     </p>
-                    <div class="crew-values">
-                        <div class="value-item">
-                            <span class="value-icon">🤝</span>
-                            <span class="value-text">Mentorship</span>
-                        </div>
-                        <div class="value-item">
-                            <span class="value-icon">💪</span>
-                            <span class="value-text">Support</span>
-                        </div>
-                        <div class="value-item">
-                            <span class="value-icon">🌟</span>
-                            <span class="value-text">Belief</span>
-                        </div>
-                        <div class="value-item">
-                            <span class="value-icon">🎯</span>
-                            <span class="value-text">Guidance</span>
-                        </div>
-                    </div>
+                    <blockquote class="journey-article-quote">
+                        "No one achieves greatness alone. Behind every success story are the people who believed,
+                        supported, and stood by us through it all."
+                    </blockquote>
                 </div>
-                <div class="crew-image-container">
-                    <!-- Add your image here -->
-                    <p class="crew-caption">Together, we're stronger than any storm</p>
+                <div class="journey-article-image-container">
+                    <img src="./assets/wanted-poster.png" alt="Journey Achievement" />
                 </div>
             </article>
         </div>
-    </section>
-
-    <!-- Footer -->
+    </article>
     <footer class="onepiece-footer">
         <div class="footer-container">
             <div class="footer-logo">
